fixed header z-index

--- a/kennzeichen-app/src/styles/_main.scss
+++ b/kennzeichen-app/src/styles/_main.scss
@@ -145,10 +145,10 @@ $z-behind: -1;
 $z-base: 0;
 $z-above-base: 1;
 $z-sticky-header: 10;
+$z-header: 70;
 $z-floating-buttons: 80;
 $z-map-overlay: 90;
 $z-map-container: 100;
 $z-dropdown: 1000;
 $z-modal-overlay: 1100;
 $z-modal: 1200;
-$z-header: 1300;
